# automata

./: .eg  .gitignore
cmake/: CMakeLists.txt  boost_include.cmake  common_include.cmake  glm_include.cmake
cmake/auto/: CMakeLists.txt  auto_include.cmake
cmake/basic/: CMakeLists.txt
cmake/tests/: CMakeLists.txt
src/: alphabet.hpp  automata.cpp  automata.hpp  command_generate.cpp  factory.hpp  glm_graph_traits.hpp  main.cpp  product.hpp  solver.hpp
tests/: alphabet.cpp  automata.cpp  factory.cpp
